--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+djangorestframework = "*"
+django-rest-knox = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.7"
