--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0"
   }
 }
