--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hash-router": "^0.2.0",
+    "react-hooks-helper": "^1.6.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-step-builder": "^2.0.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
