--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-node_modules
-# Created by https://www.toptal.com/developers/gitignore/api/django
-# Edit at https://www.toptal.com/developers/gitignore?templates=django
+
+# Created by https://www.toptal.com/developers/gitignore/api/django,react
+# Edit at https://www.toptal.com/developers/gitignore?templates=django,react
 
 ### Django ###
 *.log
@@ -150,5 +150,19 @@ dmypy.json
 # profiling data
 .prof
 
-# End of https://www.toptal.com/developers/gitignore/api/django
+### react ###
+.DS_*
+logs
+**/*.backup.*
+**/*.back.*
+
 node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
+# End of https://www.toptal.com/developers/gitignore/api/django,react
