--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-hash-router": "^0.2.0",
     "react-hooks-helper": "^1.6.0",
+    "react-paginate": "^7.0.0",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
