--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "moment": "^2.29.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
