fixing minor bugs

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.2",
     "react-step-builder": "^2.0.4",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
