--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "style-loader": "^2.0.0",
+    "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0"
@@ -37,6 +39,7 @@
     "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/react": "^11.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
@@ -55,6 +58,7 @@
     "crypto-js": "^4.0.0",
     "date-fns": "^2.20.1",
     "emotion": "^11.0.0",
+    "isarray": "^2.0.5",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
     "path": "^0.12.7",
