--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
-    "crypto-js": "^4.0.0",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^3.1.9-1",
     "date-fns": "^2.20.1",
     "emotion": "^11.0.0",
     "isarray": "^2.0.5",
